# spotify-playlistr

./: .env.example  .gitignore  README.md  create_playlist.py  generate_queries.py  main.py  pyproject.toml
