[project]
name = "Spotify-Playlistr"
version = "0.1"
description = "This app scrapes a website for artist-track combinations and creates a Spotify playlist from them, using LLMs to find the artist-track combinations."
authors = [
    {name = "sebastianmartin", email = "sebastian.martin@satellytes.com"},
]

dependencies = [
    "spotipy >= 2.19.0",
    "beautifulsoup4 >= 4.10.0",
    "python-dotenv >= 0.19.1",
    "llm >= 0.4.1",
    "strip-tags >= 0.5",
    "ttok >= 0.1",
    "inquirer>=3.1.3",
]
license = {text = "MIT"}
requires-python = ">=3.10"